# uorXiv

./: Cargo.toml
src/: ipld.rs  lib.rs  main.rs  primitives.rs  run_ops.rs  sandbox.rs  store.rs  uor_impl.rs  workspace.rs
static/: README.txt  app.js  index.html  style.css
tests/: local_fs_store.rs  workspace_memory.rs
